--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Start</title>
+	<title>Checkers</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,14 +18,108 @@
 	<![endif]-->
 </head>
 <body>
+<div class="ba-container">
 	<header class="ba-header">
 
 	</header>
 	<main>
+<div class="ba-board">
+	<div class="ba-desk ">
+	<div class="ba-dark cf">
+		<div class="ba-row">
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+		</div>
+		<div class="ba-row">
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+		</div>
+		<div class="ba-row">
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+		</div>
+		<div class="ba-row">
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+		</div>
+	</div>
+
+		<div class="ba-white cf">
+		<div class="ba-row">
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+		</div>
+		<div class="ba-row">
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+		</div>
+		<div class="ba-row">
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+		</div>
+		<div class="ba-row">
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+			<div class="ba-cell"></div>
+		</div>
+		</div>
+
+	</div>
+
+	</div>
 
 	</main>
+
 	<footer class="ba-footer">
 
-	</footer>
+</footer>
+</div>
 </body>
 </html>
